# Mini-Path-Tracer

./: CMakeLists.txt  README.md
src/: Intersection.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Vector.hpp  global.hpp  main.cpp
src/Acceleration/: BVH.cpp  BVH.hpp  Bounds3.hpp
src/Materials/: Diffuse.hpp  Material.hpp  Microfacet.hpp  Mirror.hpp  Texture.cpp  Texture.hpp  Transparent.hpp
src/Mediums/: HomoMedium.hpp  Medium.hpp  PhaseFunction.hpp
src/Primitives/: MeshTriangle.hpp  OBJ_Loader.hpp  Object.hpp  Sphere.hpp  Triangle.hpp
